Add staking pool api
